--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -28,7 +28,7 @@ jobs:
           topic_id: 11
           
   build_release_apk:
-    name: Build App Release APK
+    name: Build App Debug APK
     runs-on: ubuntu-latest
 
     steps:
@@ -55,13 +55,13 @@ jobs:
       - name: Upload release apk
         uses: actions/upload-artifact@v4
         with:
-          name: app-release
-          path: app/build/outputs/apk/release/app-release.apk
+          name: app-debug
+          path: app/build/outputs/apk/debug/app-debug.apk
           
   send_release_apk:
     name: Send Release APK
     runs-on: ubuntu-latest
-    needs: build_release_apk
+    needs: build_debug_apk
     
     steps:
       - name: Check out repository
@@ -69,10 +69,10 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.ref }}
           
-      - name: Download release apk
+      - name: Download debug apk
         uses: actions/download-artifact@v4
         with:
-          name: app-release
+          name: app-debug
           
       - name: List repo contents
         run: ls
@@ -85,7 +85,7 @@ jobs:
           
       - name: Rename file 
         run: |
-          mv app-release.apk sparkles-app-release.apk
+          mv app-debug.apk sakura-app-debug.apk
           ls 
 
       - name: Send APK to Release Channel Telegram with Topic ID
