--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -12,33 +12,18 @@ on:
   workflow_dispatch:
 
 jobs:
-  init:
-    name: Init
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: notify telegram
-        uses: EverythingSuckz/github-telegram-notify@main
-        continue-on-error: true
-        with:
-          bot_token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-          chat_id: -1002355760766
-          topic_id: 11
-          
-  build_release_apk:
-    name: Build App Debug APK
+  build:
+    name: Build Sakura
     runs-on: ubuntu-latest
 
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
 
-      - name: Set up JDK 17
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
-          java-version: '17'
+          java-version: '21'
           distribution: 'oracle'
           cache: gradle
 
@@ -47,53 +32,12 @@ jobs:
 
       - name: Validate Gradle wrapper
         uses: gradle/actions/wrapper-validation@v4
+        
+      - name: Build Sakura Debug
+        run: ./gradlew assembleDebug
 
-      - name: Build with Gradle
-        id: gradle_build_release
-        run: ./gradlew assembleRelease 
-
-      - name: Upload release apk
+      - name: Upload release app
         uses: actions/upload-artifact@v4
         with:
-          name: app-debug
-          path: app/build/outputs/apk/debug/app-debug.apk
-          
-  send_debug_apk:
-    name: Send Debug APK
-    runs-on: ubuntu-latest
-    needs: build_debug_apk
-    
-    steps:
-      - name: Check out repository
-        uses: actions/checkout@v4
-        with:
-          ref: ${{ github.event.pull_request.head.ref }}
-          
-      - name: Download debug apk
-        uses: actions/download-artifact@v4
-        with:
-          name: app-debug
-          
-      - name: List repo contents
-        run: ls
-          
-      - name: Get the last commit message
-        id: get_commit_msg
-        run: |
-          commit_message=$(git log -1 --pretty=format:'%s')
-          echo "message=$commit_message" >> $GITHUB_OUTPUT
-          
-      - name: Rename file 
-        run: |
-          mv app-debug.apk sakura-app-debug.apk
-          ls 
-
-      - name: Send APK to Release Channel Telegram with Topic ID
-        if: success()
-        continue-on-error: true
-        run: |
-          curl -X POST "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendDocument" \
-            -F chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" \
-            -F message_thread_id="11" \
-            -F document=@"sparkles-app-release.apk" \
-            -F caption="${{ github.event.head_commit.message }} by ${{ github.actor }}"
+          name: Sakura-debug
+          path: app/build/outputs/apk/debug/
