--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   build:
-    name: Build Sakura
+    name: Build nozomi
     runs-on: ubuntu-latest
 
     steps:
@@ -33,11 +33,11 @@ jobs:
       - name: Validate Gradle wrapper
         uses: gradle/actions/wrapper-validation@v4
         
-      - name: Build Sakura Debug
+      - name: Build nozomi Debug
         run: ./gradlew assembleDebug
 
       - name: Upload release app
         uses: actions/upload-artifact@v4
         with:
-          name: Sakura-debug
+          name: nozomi-debug
           path: app/build/outputs/apk/debug/
